--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 elao_tinymce_login:
     pattern: /_tinymce/login
-    defaults: {_controller: ElaoTinyMceBundle:Default:login}
+    defaults: {_controller: ElaoMceMediaBundle:Default:login}
