--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     ],
 
     "require": {
-        "php":                      ">=5.3.2",
-        "symfony/framework-bundle": "2.1.*"
+        "php":                      ">=5.3.3",
+        "symfony/framework-bundle": ">=2.1,<2.4-dev"
     },
 
     "autoload": {
